# tesstrain

./: .gitattributes  .gitignore  Makefile  README.md  fin_sme-train.sh  nor_sme-train.sh  sme-train.sh  split_training_text.py
gt_data_scripts/: pdf_to_gt.py  split_training_text.py  verify_textfiles.py
training-data/: sme.traineddata  sme.wordlist  sme_friis.traineddata
training-data/fin/: fin_sme.lstm-number-dawg  fin_sme.lstm-punc-dawg  fin_sme.lstm-recoder  fin_sme.lstm-unicharset  fin_sme.version
training-data/fin_sme/: fin_sme.charset_size=111.txt  fin_sme.charset_size=128.txt  fin_sme.charset_size=130.txt  fin_sme.traineddata  fin_sme.unicharset  list.eval  my.unicharset  unicharset
training-data/nor/: nor_sme.lstm-number-dawg  nor_sme.lstm-punc-dawg  nor_sme.lstm-recoder  nor_sme.lstm-unicharset  nor_sme.lstm-word-dawg  nor_sme.version
training-data/nor_sme-ground-truth/: algosatnegirji-005-09.box  algosatnegirji-005-09.gt.txt  algosatnegirji-005-09.lstmf  algosatnegirji-006-43.box  algosatnegirji-006-43.gt.txt  algosatnegirji-006-43.lstmf  algosatnegirji-007-36.box  algosatnegirji-007-36.gt.txt  algosatnegirji-007-36.lstmf  algosatnegirji-008-78.box  algosatnegirji-008-78.gt.txt  algosatnegirji-008-78.lstmf  algosatnegirji-009-24.box  algosatnegirji-009-24.gt.txt  algosatnegirji-009-24.lstmf  algosatnegirji-009-44.box  (+350 more)
training_scripts/: README.md  pyproject.toml
training_scripts/tess_training_scripts/: generate_gt_from_box.py  generate_line_box.py  generate_line_syllable_box.py  generate_wordstr_box.py  normalize.py  shuffle.py
(+8812 files in other folders)
